--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 
         <main class="main">
 
-            <section id="home" class="flex" style="justify-content:center; align-items:center; padding-top:150vh;">
-                <h1>Home</h1>
-            </section>
-            <section id="about" class="flex" style="justify-content:center; align-items:center; padding-top:150vh;">
-                <h1>Home</h1>
-            </section>
+            
 
         </main>
+
+        <footer class="footer" id="footer">
+
+            
+
+        </footer>
         <script src="assets/js/main.js"></script>
     </body>
 
